Allow acquiring and leveling hunter minions

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -137,6 +137,11 @@
   "text.vampirism.basic_hunter.cannot_train_you_any_further": "I cannot train you any further. You have to look for someone with more experience.",
   "text.vampirism.basic_hunter.pay_n_vampire_blood_more": "Please pay me %s more vampire blood bottles to train you",
   "text.vampirism.basic_hunter.i_will_train_you": "Alright, I will train you",
+  "text.vampirism.basic_hunter.minion.available": "I would love to work for such a reputable vampire hunter as you are",
+  "text.vampirism.basic_hunter.minion.start_serving": "Thank you for the equipment, I will serve you now and do as you command",
+  "text.vampirism.basic_hunter.minion.no_free_slot": "However, I think you are not experienced enough to command an additional hunter",
+  "text.vampirism.basic_hunter.minion.require_equipment": "If you provide me with proper equipment, in form of a %s item, I will work for you",
+  "text.vampirism.basic_hunter.minion.unavailable": "You seem to be a reputable vampire hunter, but I do no like serving someone other than myself",
   "text.vampirism.i_am_busy_right_now": "I’m busy right now",
   "text.vampirism.crossbow.not_loaded": "Not loaded",
   "text.vampirism.crossbow.loaded_arrow_count": "Loaded %s arrows",
@@ -221,6 +226,8 @@
   "text.vampirism.trainer_disabled_hunter": "It is not safe enough to train you here. Please free the village.",
   "text.vampirism.actions.bind_action": "Bound action %s to action key %s",
   "text.vampirism.hunter.cured_sanguinare": "You have come to the right person. I have cured you of sanguinare",
+  "text.vampirism.hunter_minion.equipment_upgrade": "Thank you for the upgraded equipement. I can now carry more items and am stronger.",
+  "text.vampirism.hunter_minion.equipment_wrong": "I already have this equipment",
   "category.vampirism.balance": "Balance settings",
   "category.vampirism.balance.tooltip": "Change almost any balance relevant property",
   "category.vampirism.balance_general": "General",
@@ -547,6 +554,9 @@
   "item.vampirism.item_alchemical_fire.desc2": "Burns indefinitely",
   "item.vampirism.hunter_intel.for_level": "for Level",
   "item.vampirism.pure_blood.purity": "Purity",
+  "item.vampirism.hunter_minion_equipment": "Equipment for hunter minion",
+  "item.vampirism.hunter_minion_upgrade1": "Hunter-minion equipment upgrade",
+  "item.vampirism.hunter_minion_upgrade2": "Improved hunter-minion equipment upgrade",
   "block.vampirism.castle_block.no_spawn": "No entity can spawn on this",
   "block.vampirism.castle_block.vampire_spawn": "Only vampires can spawn on this",
   "block.vampirism.sunscreen_beacon.tooltip1": "Creative only.",
