let skill nodes exclude each other (#740)

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -415,6 +415,8 @@
   "text.vampirism.skills.points_left": "%d skill point(s) left",
   "text.vampirism.skill.resetall": "Reset skills",
   "text.vampirism.skill.unlocked": "Unlocked",
+  "text.vampirism.skill.locked": "Locked by other skill",
+  "text.vampirism.skill.excluding": "Excluding each other:",
   "text.vampirism.skill.unlocks_action": "Unlocks action",
   "text.vampirism.skill.unlock_parent_first": "Unlock parent first",
   "text.vampirism.skill.skills_reset": "Your skills have been reset",
@@ -624,6 +626,7 @@
   "command.vampirism.test.skill.otherfaction": "Your faction doesn’t permit this skill",
   "command.vampirism.test.skill.noinfaction": "You have to be in a faction",
   "command.vampirism.test.skill.disabled": "Disabled skill",
+  "command.vampirism.test.skill.locked": "Locked by other Skill node",
   "command.vampirism.test.tent.success": "Success",
   "command.vampirism.test.swordtrained.nosword": "You have to hold a vampire sword in your main hand",
   "command.vampirism.test.swordcharged.nosword": "You have to hold a vampire sword in your main hand",
