Add JEI "recipe" renderer for task rewards (#736)
* Add JEI "recipe" renderer for task rewards

* Render task name.
Render "none" if no prerequisites

* Add guide book helper method for task reward info page

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -159,6 +159,11 @@
   "text.vampirism.crossbow.not_loaded": "Not loaded",
   "text.vampirism.crossbow.loaded_arrow_count": "Loaded %s arrows",
   "text.vampirism.blood.poisonous": "Poisonous blood",
+  "text.vampirism.task.reward": "Task reward",
+  "text.vampirism.task.reward_obtain": "Can be obtained as a task reward from a %stask master",
+  "text.vampirism.task.require_parent": "Complete parent (%s)",
+  "text.vampirism.task.prerequisites": "Prerequisites",
+  "text.vampirism.task.prerequisites.none": "None",
   "itemGroup.vampirism": "Vampirism",
   "death.attack.sun": "%1$s did not like the sun",
   "death.attack.garlic": "%1$s was poisoned by garlic",
