--- a/src/main/resources/assets/vampirismguide/lang/en_us.json
+++ b/src/main/resources/assets/vampirismguide/lang/en_us.json
@@ -129,6 +129,7 @@
   "guide.vampirism.items.heart_striker.text": "Face your enemy and defeat them with ease, as long as you have learned how to use it.\\nHas to be charged with blood (e.g. using a blood pedestal) to deal reasonable damage.\\nYou have to get used to every sword. In the beginning you can only swing it very slowly, but with every defeated mob you will be able to wield it more quickly.",
   "guide.vampirism.items.blood_infused_iron_ingot.text": "Specially treated iron ingot which reacts to blood. Can be used to craft some vampire weapons.",
   "guide.vampirism.items.vampire_cloak_black_red.text": "Modern vampires are fashion-conscious, therefor they need something fancy to wear.\\nThis sleek cloak might be exactly what you are looking for. Not only does it have a interesting pattern, but it is also perfectly tailored to vampires. It also comes in different colors. However, this piece of fashion is not cheap.",
+  "guide.vampirism.items.feeding_adapter.text": "Can be used to directly feed from or fill a blood container in your inventory.\nHave a blood container somewhere in your inventory and place this on your hotbar while feeding to fill the container or right click it to drink blood from the container.",
   "guide.vampirism.blocks.title": "Blocks",
   "guide.vampirism.blocks.castle_block_dark_brick.text": "Decorative block. Prevents non vampire mobs from spawning on it. The Dark Stone variant allows no entity to spawn on it.",
   "guide.vampirism.blocks.vampire_orchid.text": "Flower. Can be found in vampire biome.",
