--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -250,6 +250,8 @@
   "text.vampirism.taskmaster.no_tasks_unique": "There are no task left",
   "__comment": "task_entity_tags",
   "tasks.vampirism.vampirism:hunter": "Hunter entities",
+  "tasks.vampirism.vampirism:advanced_hunter": "Advanced hunters",
+  "tasks.vampirism.vampirism:advanced_vampire": "Advanced vampires",
   "tasks.vampirism.vampirism:vampire": "Vampire entities",
   "category.vampirism.balance": "Balance settings",
   "category.vampirism.balance.tooltip": "Change almost any balance relevant property",
@@ -584,6 +586,9 @@
   "item.vampirism.hunter_minion_upgrade1": "Hunter-minion equipment upgrade",
   "item.vampirism.hunter_minion_upgrade2": "Improved hunter-minion equipment upgrade",
   "item.vampirism.feeding_adapter": "Feeding adapter",
+  "item.vampirism.vampire_minion_binding": "Vampire minion binding",
+  "item.vampirism.vampire_minion_upgrade1": "Vampire minion upgrade",
+  "item.vampirism.vampire_minion_upgrade2": "Improved vampire minion upgrade",
   "block.vampirism.castle_block.no_spawn": "No entity can spawn on this",
   "block.vampirism.castle_block.vampire_spawn": "Only vampires can spawn on this",
   "block.vampirism.sunscreen_beacon.tooltip1": "Creative only.",
@@ -687,6 +692,7 @@
   "minioncommand.vampirism.attackhostile": "Attack hostile including player",
   "minioncommand.vampirism.collectblood": "Collect blood",
   "minioncommand.vampirism.defendlord": "Defend lord",
+  "minioncommand.vampirism.nothing": "Nothing",
   "minion_task.vampirism.stay": "Stay here",
   "minioncommand.vampirism.comeback": "Come back (Remote minions)",
   "minion_task.vampirism.follow_lord": "Follow",
@@ -702,5 +708,31 @@
   "text.vampirism.minion.call_all": "Call all",
   "text.vampirism.minion.respawn": "Respawn dead",
   "__comment": "tasks",
-  "task.vampirism.feeding_adapter": "Kitchen utility"
+  "task.vampirism.feeding_adapter": "Kitchen utility",
+  "task.vampirism.vampire_minion_binding": "Minion control",
+  "task.vampirism.vampire_minion_upgrade1": "Minion upgrade",
+  "task.vampirism.vampire_minion_upgrade2": "Minion enhanced upgrade",
+  "task.vampirism.vampire_lord1": "Are you worthy?",
+  "task.vampirism.vampire_lord1.reward": "Become a vampire lord",
+  "task.vampirism.vampire_lord2": "The next step",
+  "task.vampirism.vampire_lord2.reward": "Lord Level 2",
+  "task.vampirism.vampire_lord3": "One more",
+  "task.vampirism.vampire_lord3.reward": "Lord Level 3",
+  "task.vampirism.vampire_lord4": "Control mania",
+  "task.vampirism.vampire_lord4.reward": "Lord Level 4",
+  "task.vampirism.vampire_lord5": "Megalomania",
+  "task.vampirism.vampire_lord5.reward": "Lord Level 5",
+  "task.vampirism.hunter_minion_equipment": "Proper equipment",
+  "task.vampirism.hunter_minion_upgrade1": "An upgrade",
+  "task.vampirism.hunter_minion_upgrade2": "Top-notch equipment",
+  "task.vampirism.hunter_lord1": "Are you worthy?",
+  "task.vampirism.hunter_lord1.reward": "Become a hunter lord",
+  "task.vampirism.hunter_lord2": "The next step",
+  "task.vampirism.hunter_lord2.reward": "Lord Level 2",
+  "task.vampirism.hunter_lord3": "One more",
+  "task.vampirism.hunter_lord3.reward": "Lord Level 3",
+  "task.vampirism.hunter_lord4": "Control mania",
+  "task.vampirism.hunter_lord4.reward": "Lord Level 4",
+  "task.vampirism.hunter_lord5": "Megalomania",
+  "task.vampirism.hunter_lord5.reward": "Lord Level 5"
 }
