Add collect blood task. Update collect resources task. Add textures

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -694,12 +694,12 @@
   "minioncommand.vampirism.defendlord": "Defend lord",
   "minioncommand.vampirism.nothing": "Nothing",
   "minion_task.vampirism.stay": "Stay here",
-  "minioncommand.vampirism.comeback": "Come back (Remote minions)",
   "minion_task.vampirism.follow_lord": "Follow",
-  "minioncommand.vampirism.converttosaveable": "Take Gem of Binding back",
   "minion_task.vampirism.defend_area": "Defend area",
   "minion_task.vampirism.collect_hunter_items": "Collect resources",
   "minion_task.vampirism.collect_hunter_items.start": "I will head out and search for resources",
+  "minion_task.vampirism.collect_blood": "Collect blood",
+  "minion_task.vampirism.collect_blood.start": "I will head out and gather blood for you, Sire.",
   "minioncommand.vampirism.none": "None",
   "text.vampirism.minion.can_respawn": "My lord, I have recovered (%s)",
   "text.vampirism.minion.died": "My lord, I have died (%s)",
