Update guide book with lord information

--- a/src/main/resources/assets/vampirismguide/lang/en_us.json
+++ b/src/main/resources/assets/vampirismguide/lang/en_us.json
@@ -56,6 +56,9 @@
   "guide.vampirism.vampire.skills.actions2": "Most actions have a cooldown time, you can only activate them if they are not in cooldown mode.\\nSome actions also have a duration, then you can deactivate the action if you do not need it anymore by selecting it again to decrease the cooldown time.",
   "guide.vampirism.vampire.unvampire": "Un-Vampire",
   "guide.vampirism.vampire.unvampire.text": "If you want to become a normal human again, you have to look for a %s. It can be found in the church of some villages. But be careful, you will loose all your levels.",
+  "guide.vampirism.vampire.lord": "Vampire Lord",
+  "guide.vampirism.vampire.lord.text": "You feel much more powerful than those weak vampire NPCs? As a vampire lord you can bind some to you allowing you to control them and make them work for you.\\nTo become a vampire lord you must reach the highest vampire level first. Then the %s should offer you a special task which, upon completion, grants you the right to name yourself vampire lord and to control minions.\\nYou can level up to level %s by completing more tasks to be allowed to control more minions.",
+  "guide.vampirism.vampire.lord.minion": "To obtain a minion you will need a %s item. Look for a weak vampire NPC and right-click your chosen minion with it.\\nIt should then be under your control and you can order it to e.g. defend you or collect blood.\\nIf you want to have the best of the best you can additional enhance the minions capabilities using the hard to obtain %s or %s.",
   "guide.vampirism.hunter.title": "Hunter",
   "guide.vampirism.hunter.getting_started": "Getting Started as Hunter",
   "guide.vampirism.hunter.getting_started.become": "To become a Vampire Hunter you will have to find a village, in which a \"%s\" lives. You will find some garlic plants behind his house. Use them to craft a %s. You also should replant some garlic because it will be useful later. Go inside the trainer’s house and use the special chair inside to inject that garlic vaccination. It will make you immune to the vampire’s poisonous Sanguinare Vampiris",
@@ -81,6 +84,9 @@
   "guide.vampirism.hunter.vamp_slayer.fire": "Vampires suffer more damage from fire than normal humans.\\nYou can use that to your advantage. You could for example use indefinitely burning alchemical fire to protect your base.\\n Or you could use special fire spreading bolts for your crossbow. Don’t worry, alchemical fire does not spread or damage blocks.",
   "guide.vampirism.hunter.unhunter": "Un-Hunter",
   "guide.vampirism.hunter.unhunter.text": "If you decide to become a vampire, you have to get rid of the garlic in your blood. To do that craft yourself a %s and inject it by right clicking a %s.",
+  "guide.vampirism.hunter.lord": "Hunter Lord",
+  "guide.vampirism.hunter.lord.text": "You need support in the never ending fight against vampires? As a master hunter also known as hunter lord you can recruit hunter NPCs to work for you.\\nTo become a hunter lord you must reach the highest hunter level first. Then the %s should offer you a special task, which, upon completion, grants you the right to name yourself hunter lord and command other hunter NPCs.\\nYou can level up to level %s by completing more tasks. At a higher level more hunter NPCs are willing to work for you.",
+  "guide.vampirism.hunter.lord.minion": "To recruit a minion you will need a %s item. Look for a low level hunter NPC and right-click your chosen recruit with it.\\nIt should now be under your command and you can give them orders, E.g defending yoou or collecting resources.\\nIf you want to have the best of the best you can enhance their equipment and their capabilities using hard to obtain %s and %s.",
   "guide.vampirism.skills.bind_action": "You can also bind up to two actions to keyboard keys. See controls and /vampirism bind-action.",
   "guide.vampirism.entity.title": "Creatures",
   "guide.vampirism.entity.general": "General",
@@ -93,6 +99,9 @@
   "guide.vampirism.entity.advanced_vampire.text": "Experienced vampire. Spawns rarely in the world and sometimes is followed by subordinated vampires. Drops %s and %s.\\nThey have individual names and skins of Vampirism’s supporters as well as some more random names.",
   "guide.vampirism.entity.ghost.text": "Spawns in the vampire biome.",
   "guide.vampirism.entity.vampire_baron.text": "Spawns rarely in vampire biomes.\\nOccurs in different levels partially depending on the players level.\\nDrops %s.\\nIs very strong and summons minions which help him.",
+  "guide.vampirism.entity.hunter_trainer.text": "The trainer can be found in some villages. They have their own houses.\\nHigher level hunter players can train with them to level up",
+  "guide.vampirism.entity.taskmaster": "Task Master",
+  "guide.vampirism.entity.taskmaster.text": "The taskmaster entity offers different quests with different rewards for the player.\\nThere are variants for the different factions and they can be found in a village controlled by the respective faction.\\nThere are special task that can be only be completed once, but are available at all task master entities. Additionally there are repeatable tasks, which have to be accepted and completed at the same task master entity.\\nTo check the objectives click on a certain task. If you want to accept the task, click the green check and start working towards the objective. Return once complete to receive your reward.\\nItem objectives require you to have the specified items in your inventory. They will be given to the task master when you click complete.",
   "guide.vampirism.world.title": "World",
   "guide.vampirism.world.vampire_forest": "Vampire Forest",
   "guide.vampirism.world.vampire_forest.text": "The Vampire Forest is a rare biome. It is foggy and occupied by vampire creatures, because they do not receive sun damage due to the fog.",
@@ -130,6 +139,8 @@
   "guide.vampirism.items.blood_infused_iron_ingot.text": "Specially treated iron ingot which reacts to blood. Can be used to craft some vampire weapons.",
   "guide.vampirism.items.vampire_cloak_black_red.text": "Modern vampires are fashion-conscious, therefor they need something fancy to wear.\\nThis sleek cloak might be exactly what you are looking for. Not only does it have a interesting pattern, but it is also perfectly tailored to vampires. It also comes in different colors. However, this piece of fashion is not cheap.",
   "guide.vampirism.items.feeding_adapter.text": "Can be used to directly feed from or fill a blood container in your inventory.\nHave a blood container somewhere in your inventory and place this on your hotbar while feeding to fill the container or right click it to drink blood from the container.",
+  "guide.vampirism.items.vampire_minion_binding.text": "The %s can be used by vampire lords to make a vampire NPC their minion by right clicking them.\\n%s and %s can be used to improve the capabilities of a minion.\\nThese items can be obtained as rewards from a %s",
+  "guide.vampirism.items.hunter_minion_equipment.text": "The %s can be used by hunter lords on a hunter NPC to properly equip it and allow it to work for them.\\n%s and %s can be used to improve the equipment and capabilities of a minion.\\nThese items can be obtained as rewards from a %s",
   "guide.vampirism.blocks.title": "Blocks",
   "guide.vampirism.blocks.castle_block_dark_brick.text": "Decorative block. Prevents non vampire mobs from spawning on it. The Dark Stone variant allows no entity to spawn on it.",
   "guide.vampirism.blocks.vampire_orchid.text": "Flower. Can be found in vampire biome.",
@@ -148,5 +159,6 @@
   "guide.vampirism.blocks.blood_grinder.text": "This advanced machine is able to grind certain items to extract blood. This includes items like %s but also %s and some modded items. However, the extracted blood is impure. Place it on top of a %s to filter the result.\\nIt acts like an hopper extracting suitable items from a inventory above and accepting items thrown on top of it.",
   "guide.vampirism.blocks.blood_sieve.text": "This block can be used to clean %s produced by the %s. It might also be used to convert blood fluids from other mods. Place it on top of a blood container and pump some liquid to filter in to it. It can also drain impure blood from a tank above.",
   "guide.vampirism.blocks.totem_top.text": "Used to control a village.",
-  "guide.vampirism.blocks.totem_base.text": "Used to control a village."
+  "guide.vampirism.blocks.totem_base.text": "Used to control a village.",
+  "guide.vampirism.common.minion_control": "Minion have an inventory which you can use to store items. By interacting with your minion you can access said inventory and also configure the appearance of the minion.\\nYou can also give the minion orders in this screen. Alternatively, you can use the minion command hotkey (%s) to give orders to all of your minions at once. You can also switch from your action menu to the minion task menu by pressing Space while the screen is shown. Therefore, it is sufficient to bind one of this keys.\\nTo exclude a specific minion from your commands (except %s) you can click on the small lock icon in the minion interaction screen.\\nWhen a minion is heavily wounded, it will teleport away to recover from its wounds. Once healed, it will let you know and you can call it back with the %s command."
 }
