Potion tree rework (#729)
* WIP blood potion replacement

* Add new potions

* Fix illegal field access

* Finish GUI
Fix container slots
Fix sync
Rename

* Fix rendering

* Add master potions

* Remove blood potion stuff

* Fix potion table loot table

* Add respective skills

* Add lang keys for _imob creatures

* Add potion resistance action

* Add recipe and guide book entry

* Remove duplicate string

* Update potion table model

* Add potion gallery to guide book

* Remove unused extended potion recipe concept

* Implement JEI recipe category

* Update guide book

* Remove old files

* Always require vampire blood

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -309,6 +309,8 @@
   "action.vampirism.half_invulnerable.desc": "Action which blocks large damages but slows you down",
   "action.vampirism.awareness_hunter": "Vampire Awareness",
   "action.vampirism.awareness_hunter.desc": "Action to sense nearby vampire players or entities",
+  "action.vampirism.potion_resistance_hunter": "Potion resistance",
+  "action.vampirism.potion_resistance_hunter.desc": "Remove certain negative potion effects applied to you",
   "__comment": "skills",
   "skill.vampirism.vampire": "Becoming a vampire",
   "skill.vampirism.creeper_avoided": "Avoided by creepers",
@@ -335,14 +337,13 @@
   "skill.vampirism.hunter_attack_speed_advanced": "Attack swift as the wind",
   "skill.vampirism.stake1": "How to use a stake",
   "skill.vampirism.stake2": "How to actually use a stake",
-  "skill.vampirism.blood_potion_table": "Blood Potion Table",
-  "skill.vampirism.blood_potion_good_or_bad": "Good or Bad?",
-  "skill.vampirism.blood_potion_less_bad": "Improved Brewing",
-  "skill.vampirism.blood_potion_category_hint": "Experienced brewer",
-  "skill.vampirism.blood_potion_faster_crafting": "Swift brewing",
-  "skill.vampirism.blood_potion_duration": "Improved response",
-  "skill.vampirism.blood_potion_portable_crafting": "Brewing on the go",
-  "skill.vampirism.blood_potion_identify_some": "Brewing master",
+  "skill.vampirism.multitask_brewing": "Multitask Brewing",
+  "skill.vampirism.durable_brewing": "Durable Brewing",
+  "skill.vampirism.concentrated_brewing": "Concentrated Brewing",
+  "skill.vampirism.swift_brewing": "Swift Brewing",
+  "skill.vampirism.efficient_brewing": "Efficient Brewing",
+  "skill.vampirism.master_brewer": "Master Brewer",
+  "skill.vampirism.concentrated_durable_brewing": "Concentrated and Durable Brewing",
   "skill.vampirism.tech_weapons": "Technology",
   "skill.vampirism.enhanced_armor": "Enhanced armor",
   "skill.vampirism.enhanced_weapons": "Enhanced weapons",
@@ -392,6 +393,13 @@
   "skill.vampirism.purified_garlic.desc": "Purify your garlic to increase its effect. Boost your garlic diffusor with it.",
   "skill.vampirism.holy_water_enhanced.desc": "Create enhanced Holy Water instead of normal one.",
   "skill.vampirism.garlic_beacon_improved.desc": "Learn how to craft a garlic diffuser with a higher range",
+  "skill.vampirism.multitask_brewing.desc": "Brew 5 instead of 3 potions with the potion table at once",
+  "skill.vampirism.durable_brewing.desc": "Learn expensive recipes to brew very long lasting potions",
+  "skill.vampirism.concentrated_brewing.desc": "Learn expensive recipes to brew very strong potions",
+  "skill.vampirism.swift_brewing.desc": "Speed up your brewing process",
+  "skill.vampirism.efficient_brewing.desc": "Less is more",
+  "skill.vampirism.master_brewer.desc": "Master some completely new potions",
+  "skill.vampirism.concentrated_durable_brewing.desc": "Long and Strong is finally possible",
   "__comment": "interaction",
   "text.vampirism.hunter_trainer.trainer_level_wrong": "I don’t train hunters as inexperienced as you are. Look for someone less experienced",
   "text.vampirism.alchemical_cauldron.other": "This cauldron belongs to %s. You should not use it.",
@@ -476,6 +484,7 @@
   "block.vampirism.castle_slab_purple_brick": "Purple Brick Slab",
   "block.vampirism.castle_slab_dark_stone": "Dark Stone Slab",
   "block.vampirism.coffin": "Coffin",
+  "block.vampirism.potion_table": "Potion table",
   "__comment": "blocks_old",
   "block.vampirism.tent": "Tent",
   "block.vampirism.med_chair": "Injection Chair",
@@ -571,6 +580,26 @@
   "item.vampirism.garlic_bomb": "Garlic Bomb",
   "item.vampirism.holy_salt_water": "Blessed Salt Water",
   "item.vampirism.battle_axe": "Battle Axe",
+  "__comment": "Potion items",
+  "item.minecraft.potion.effect.thirst": "Potion of Thirst",
+  "item.minecraft.potion.effect.blindness": "Potion of Blindness",
+  "item.minecraft.potion.effect.nausea": "Potion of Nausea",
+  "item.minecraft.potion.effect.health_boost": "Potion of Health Boost",
+  "item.minecraft.potion.effect.resistance": "Potion of Resistance",
+  "item.minecraft.splash_potion.effect.thirst": "Splash Potion of Thirst",
+  "item.minecraft.splash_potion.effect.blindness": "Splash Potion of Blindness",
+  "item.minecraft.splash_potion.effect.nausea": "Splash Potion of Nausea",
+  "item.minecraft.splash_potion.effect.health_boost": "Splash Potion of Health Boost",
+  "item.minecraft.splash_potion.effect.resistance": "Splash Potion of Resistance",
+  "item.minecraft.lingering_potion.effect.thirst": "Lingering Potion of Thirst",
+  "item.minecraft.lingering_potion.effect.blindness": "Lingering Potion of Blindness",
+  "item.minecraft.lingering_potion.effect.nausea": "Lingering Potion of Nausea",
+  "item.minecraft.lingering_potion.effect.health_boost": "Lingering Potion of Health Boost",
+  "item.minecraft.lingering_potion.effect.resistance": "Lingering Potion of Resistance",
+  "__comment": "Attributes",
+  "attribute.name.vampirism.blood_exhaustion": "Blood exhaustion",
+  "attribute.name.vampirism.bite_damage": "Bite damage",
+  "attribute.name.vampirism.sundamage": "Sun damage",
   "__comment": "tooltips",
   "item.vampirism.crossbow_arrow_vampire_killer.tooltip": "Instantly kills low level vampire NPCs.",
   "item.vampirism.crossbow_arrow_spitfire.tooltip": "Creates a alchemical fire on impact",
@@ -674,8 +703,6 @@
   "entity.vampirism.vampire_hunter": "Vampire Hunter",
   "entity.vampirism.vampire": "Vampire",
   "entity.vampirism.ghost": "Ghost",
-  "entity.vampirism.vampire_minion_r": "Vampire Minion",
-  "entity.vampirism.vampire_minion_s": "Vampire Minion",
   "entity.vampirism.blinding_bat": "Bat",
   "entity.vampirism.dracula": "Dracula",
   "entity.vampirism.dead_mob": "Dead mob",
@@ -687,6 +714,10 @@
   "entity.Villager.vampirism.vampire_expert": "Vampire Expert",
   "entity.minecraft.villager.vampirism.hunter_expert": "Hunter Expert",
   "entity.minecraft.villager.vampirism.vampire_expert": "Vampire Expert",
+  "entity.vampirism.advanced_vampire_imob": "Advanced Vampire",
+  "entity.vampirism.advanced_hunter_imob": "Advanced Hunter",
+  "entity.vampirism.hunter_imob": "Vampire Hunter",
+  "entity.vampirism.vampire_imob": "Vampire",
   "__comment": "minioncommands",
   "minioncommand.vampirism.attackhostilenoplayers": "Attack hostile",
   "minioncommand.vampirism.attackhostile": "Attack hostile including player",
