Add titles for lord players

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -137,6 +137,7 @@
   "text.vampirism.level": "Level",
   "text.vampirism.level_short": "Lvl",
   "text.vampirism.lord": "Lord",
+  "text.vampirism.title": "Title",
   "text.vampirism.can_only_be_used_by": "This can only be used by %s players",
   "text.vampirism.can_only_be_used_by_level": "This can only be used by %s players of level %s or higher",
   "text.vampirism.med_chair_other_faction": "You cannot become a Hunter since you already are a %s",
@@ -688,6 +689,8 @@
   "command.vampirism.argument.action.notfound": "The given action %s does not exist",
   "command.vampirism.argument.faction.notfound": "The given faction %s does not exist",
   "command.vampirism.argument.faction.notplayable": "You can not play as %s",
+  "command.vampirism.base.gender.success": "Successfully set gender for lord title display",
+  "command.vampirism.base.lord.successful": "%s is now a %s lord level %s",
   "__comment": "commands_old",
   "command.vampirism.base.vampire_biome.parse_dist": "Failed to parse max distance. Using %s.",
   "__comment": "entities",
@@ -775,5 +778,21 @@
   "stat.vampirism.infected_creatures": "Creatures infected with Sanguinare",
   "stat.vampirism.interact_alchemical_cauldron": "Interactions with Alchemical Cauldron",
   "stat.vampirism.weapon_table": "Interactions with Weapon Table",
-  "stat.vampirism.capture_village": "Villages captured"
+  "stat.vampirism.capture_village": "Villages captured",
+  "__comment": "Titles",
+  "text.vampirism.lord_title.vampire.male1": "Baron",
+  "text.vampirism.lord_title.vampire.male2": "Viscount",
+  "text.vampirism.lord_title.vampire.male3": "Count",
+  "text.vampirism.lord_title.vampire.male4": "Duke",
+  "text.vampirism.lord_title.vampire.male5": "Prince",
+  "text.vampirism.lord_title.vampire.female1": "Baroness",
+  "text.vampirism.lord_title.vampire.female2": "Viscountess",
+  "text.vampirism.lord_title.vampire.female3": "Countess",
+  "text.vampirism.lord_title.vampire.female4": "Duchess",
+  "text.vampirism.lord_title.vampire.female5": "Princess",
+  "text.vampirism.lord_title.hunter.1": "Lieutenant",
+  "text.vampirism.lord_title.hunter.2": "Captain",
+  "text.vampirism.lord_title.hunter.3": "Major",
+  "text.vampirism.lord_title.hunter.4": "Colonel",
+  "text.vampirism.lord_title.hunter.5": "Brigadier"
 }
