--- a/src/main/resources/assets/vampirismguide/lang/en_us.json
+++ b/src/main/resources/assets/vampirismguide/lang/en_us.json
@@ -57,7 +57,8 @@
   "guide.vampirism.vampire.unvampire": "Un-Vampire",
   "guide.vampirism.vampire.unvampire.text": "If you want to become a normal human again, you have to look for a %s. It can be found in the church of some villages. But be careful, you will loose all your levels.",
   "guide.vampirism.vampire.lord": "Vampire Lord",
-  "guide.vampirism.vampire.lord.text": "You feel much more powerful than those weak vampire NPCs? As a vampire lord you can bind some to you allowing you to control them and make them work for you.\\nTo become a vampire lord you must reach the highest vampire level first. Then the %s should offer you a special task which, upon completion, grants you the right to name yourself vampire lord and to control minions.\\nYou can level up to level %s by completing more tasks to be allowed to control more minions.",
+  "guide.vampirism.vampire.lord.text": "You feel much more powerful than those weak vampire NPCs? As a vampire lord you can bind some to you allowing you to control them and make them work for you.\\nTo become a vampire lord you must reach the highest vampire level first. Then the %s should offer you a special task which, upon completion, grants you the right to name yourself %s/%s and to control minions.\\nYou can level up to a vampire %s/%s by completing more tasks to be allowed to control more minions.",
+  "guide.vampirism.vampire.lord.titles": "Vampire lord titles",
   "guide.vampirism.vampire.lord.minion": "To obtain a minion you will need a %s item. Look for a weak vampire NPC and right-click your chosen minion with it.\\nIt should then be under your control and you can order it to e.g. defend you or collect blood.\\nIf you want to have the best of the best you can additional enhance the minions capabilities using the hard to obtain %s or %s.",
   "guide.vampirism.hunter.title": "Hunter",
   "guide.vampirism.hunter.getting_started": "Getting Started as Hunter",
@@ -85,7 +86,8 @@
   "guide.vampirism.hunter.unhunter": "Un-Hunter",
   "guide.vampirism.hunter.unhunter.text": "If you decide to become a vampire, you have to get rid of the garlic in your blood. To do that craft yourself a %s and inject it by right clicking a %s.",
   "guide.vampirism.hunter.lord": "Hunter Lord",
-  "guide.vampirism.hunter.lord.text": "You need support in the never ending fight against vampires? As a master hunter also known as hunter lord you can recruit hunter NPCs to work for you.\\nTo become a hunter lord you must reach the highest hunter level first. Then the %s should offer you a special task, which, upon completion, grants you the right to name yourself hunter lord and command other hunter NPCs.\\nYou can level up to level %s by completing more tasks. At a higher level more hunter NPCs are willing to work for you.",
+  "guide.vampirism.hunter.lord.text": "You need support in the never ending fight against vampires? As a master hunter also known as hunter lord you can recruit hunter NPCs to work for you.\\nTo become a hunter lord you must reach the highest hunter level first. Then the %s should offer you a special task, which, upon completion, grants you the title %s and the right to command other hunter NPCs.\\nYou can rank up to rank %s and by completing more tasks. At a higher rank more hunter NPCs are willing to work for you.",
+  "guide.vampirism.hunter.lord.titles": "Master hunter titles",
   "guide.vampirism.hunter.lord.minion": "To recruit a minion you will need a %s item. Look for a low level hunter NPC and right-click your chosen recruit with it.\\nIt should now be under your command and you can give them orders, E.g defending yoou or collecting resources.\\nIf you want to have the best of the best you can enhance their equipment and their capabilities using hard to obtain %s and %s.",
   "guide.vampirism.skills.bind_action": "You can also bind up to two actions to keyboard keys. See controls and /vampirism bind-action.",
   "guide.vampirism.entity.title": "Creatures",
