--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -774,6 +774,24 @@
   "task.vampirism.hunter_lord5.reward": "Lord Level 5",
   "task.vampirism.fire_resistance1": "Finally flame-proof",
   "task.vampirism.fire_resistance2": "Upgraded resistance",
+  "task.vampirism.v_infect1": "Sanguinare spreader I",
+  "task.vampirism.v_infect2": "Sanguinare spreader II",
+  "task.vampirism.v_infect3": "Sanguinare spreeader III",
+  "task.vampirism.v_capture1": "Extending territory I",
+  "task.vampirism.v_capture2": "Extending territory II",
+  "task.vampirism.v_kill1": "Hunter hunting I",
+  "task.vampirism.v_kill2": "Hunter hunting II",
+  "task.vampirism.h_kill1": "Cleansing I",
+  "task.vampirism.h_kill2": "Cleansing II",
+  "task.vampirism.h_kill3": "Cleansing III",
+  "task.vampirism.h_capture1": "Village protection I",
+  "task.vampirism.h_capture2": "Village protection II",
+  "task.vampirism.h_souls": "Soul collection",
+  "task.vampirism.h_crossbow": "Equipment donation",
+  "task.vampirism.break_bones1": "Break some bones I",
+  "task.vampirism.break_bones2": "Break some bones II",
+  "task.vampirism.break_bones3": "Break some bones III",
+  "task.vampirism.break_bones4": "Break some bones IV",
   "__comment": "Stats",
   "stat.vampirism.infected_creatures": "Creatures infected with Sanguinare",
   "stat.vampirism.interact_alchemical_cauldron": "Interactions with Alchemical Cauldron",
